# QuarterONions

./: CMakeLists.txt  Quateronion.cpp  Quateronion.h  README.md  Vector3.cpp  Vector3.h  main.cpp
